after local storage and styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    input[type="text"]{@apply bg-gray-300 p-3 text-gray-600}
+
+    select{@apply bg-gray-300 p-3 text-gray-600}
+
+    form{@apply w-2/3}
+
+    .errorP{@apply text-red-600}
+}
